tests/invalid/function/generic_item_expected_fn_repeated_param_conflict.facet
fn same<T>(x: affine T, y: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  let f: unrestricted fn(affine isize, affine bool) -> affine isize = same in
  (f 1 true)
}
